--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,11 @@ UpgradeLog.htm
 ## .tmc file should not be ignored. Results in broken links.
 ## .tpy file can be ignored. They are a holdover from CoDeSys and aren't used much by beckhoff
 ## Source: https://infosys.beckhoff.com/english.php?content=../content/1033/tc3_sourcecontrol/18014398915785483.html&id=
-*.tmc
+## *.tmc
 *.tpy
-!VFFSDemo.tmc
+LineIDs.dbg
+LineIDs.dbg.bak
+
 
 #Scope stuff
 *.tcscopex
@@ -44,9 +46,17 @@ TrialLicense.tclrs
 ## Folder contains TwinCAT scope data. Should not be source controlled.
 ScopeData
 
-.tmcRefac
+*.tmcRefac
+*.library
+*.compiled-library
+*.compileinfo
+*.project.~u
+*.tsproj.bak
+*.xti.bak
 
-#*.library
+
+_Libraries/
+_ModuleInstall/
 
 
 ## Ignore TwinCAT HMI temporary files, build results, and
@@ -150,4 +160,4 @@ artifacts/
 *.nuget.targets
 
 
-#!VFFS Demo PLC/PLC1/_Libraries/beckhoff automation llc/base types/3.0.0/
+##Seedra/SeedraPLC/_Libraries/beckhoff automation llc/base types/3.0.0/
