--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ UpgradeLog.htm
 ## .tmc file should not be ignored. Results in broken links.
 ## .tpy file can be ignored. They are a holdover from CoDeSys and aren't used much by beckhoff
 ## Source: https://infosys.beckhoff.com/english.php?content=../content/1033/tc3_sourcecontrol/18014398915785483.html&id=
-## *.tmc
+SeedraPLC.tmc
 *.tpy
 LineIDs.dbg
 LineIDs.dbg.bak
@@ -161,3 +161,4 @@ artifacts/
 
 
 ##Seedra/SeedraPLC/_Libraries/beckhoff automation llc/base types/3.0.0/
+Seedra/SeedraPLC/SeedraPLC.tmc
