--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+*.tsproj filter=gitignore
+$ git config --global filter.gitignore.smudge cat
